--- a/Clock.html
+++ b/Clock.html
@@ -14,6 +14,8 @@
 </div>
 
 <style>
+
+
 html{
     background: url();
     background-size:cover;
@@ -23,7 +25,7 @@ html{
 }
 
 body{
-    font-size=2rem;
+    font-size:2rem;
     display:flex;
     flex:1;
     min-height:100vh;
@@ -37,7 +39,7 @@ body{
     border:20px solid white;
     border-radius:50%;
     margin:50px auto;
-    psoition:relative;
+    position:relative;
     padding:2rem;
     box-shadow:
     0 0 0px 4px rgba(0,0,0,0,1),
@@ -52,4 +54,42 @@ body{
     transform: translateY(-3px);
 
 }
+
+.hand{
+    width:50%;
+    height: 6px;
+    background: black;
+    position: absolute;
+    top: 50%;
+    transform-origin: 100%;
+    transform:rotate(90deg);
+    transition:all 0.05s;
+    transition-timing-function: cubic-bezier(0.1,2.7,0.58,1);
+}
+
+</style>
+
+<script>
+const secondHand=document.querySelector('.second-hand');
+
+function setDate(){
+    const now= new Date();
+    const seconds=now.getseconds();
+    const secondsDegrees=((seconds/60)*360)+90;
+    secondHand.style.transform=`rotate(${secondsDegrees}deg)`;
+
+    const mins=now.getMinutes();
+    const minsDegrees=((mins/60)*360)+90;
+    minHand.style.transform=`rotate(${minsDegrees}deg)`;
+
+    const hours=now.getHours();
+    const hoursDegrees=((hours/60)*360)+90;
+    hourHand.style.transform=`rotate(${hoursDegrees}deg)`;
+
+
+}
+setInterval(setDate,1000);
+</script>
+</body>
+</html>
 
