Added background with clock outline

--- a/Clock.html
+++ b/Clock.html
@@ -17,7 +17,7 @@
 
 
 html{
-    background: url();
+    background:#018DED url(https://image.freepik.com/free-photo/white-sand-curve-tropical-sandy-beach-with-blurry-blue-ocean-blue-sky-background_34362-493.jpg);
     background-size:cover;
     font-family:'helvetica neue';
     text-align:center;
